source/styles/content.scss
.btd-circled_avatars {
	.avatar, .prf-img {
		border-radius: 200px;
	}

	a.js-account-item.compose-account {
		border-radius: 200px;
	}
}

.btd-name_display-username, .btd-name_display-fullname {
	.js-column .fullname + .username {
		display: none;
	}
}

.btd-yt_rm_button {
	.video-overlay.icon-with-bg-round {
		display: none;
	}
}

.btd-small_icons_compose {
	.compose-content button > span.label {
		display: none;
	}

	.compose-content button {
		width: auto !important;
	}

	.js-schedule-datepicker-holder > div > div.caret {
		left: 27%;
	}
}


.btd-only_one-thumbnails {
	.js-media-preview-container:not(:first-of-type) {
		display: none;
	}
}

.btd-no_columns_icons {
	header > i.column-type-icon.icon {
		display:none;
	}

	header > h1.column-title {
		padding-left: 10px;
	}
}

.btd-grayscale_notification_icons i.icon.activity-indicator {
	color: #737373;
}

.btd-typeahead_display_username_only {
	.typeahead strong.fullname {
		display: none;
	}

	.typeahead span.username {
		color:#222;
	}
	.typeahead .s-selected span.username {
		color:white;
	}
}


@-webkit-keyframes tweet-enter { 
	from { background-color: rgba(54, 82, 122, 1); }
	to { background-color: rgba(54, 82, 122, 0); }
}

.btd-flash_tweets {

	&.flash-mentions :-webkit-any(.column-type-interactions, .column-type-mention) .js-chirp-container > article:first-of-type { 
	    -webkit-animation-duration: 2s;
	    -webkit-animation-name: tweet-enter;
	}

	&.flash-all [class*="column-type"] .js-chirp-container > article:first-of-type { 
	   -webkit-animation-duration: 2s;
	   -webkit-animation-name: tweet-enter;
	}
} 

.btd-blurred_modals.btd-open-modal-on {
	#open-modal .med-fullpanel {
		background:transparent;
		max-width: none;
	}

	.ovl, .overlay {
		background-color: rgba(black,.9);
	}
}

.js-embeditem .js-mediaembed > a {
	transition: opacity .2s ease;
}

.js-embeditem:not(.is-loaded) .js-mediaembed > a {
	opacity: 0;
}

@import "minimalMode";
@import "emojiPanel";
@import "emojis";

